--- a/NotABadPlayer/app/src/main/res/layout/item_playlist.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_playlist.xml
@@ -36,7 +36,7 @@
         android:layout_height="64dp" 
         android:visibility="gone"
         android:src="@drawable/remove"
-        android:tint="@color/genericButtonBackground"
+        android:tint="?genericButtonBackgroundColor"
         android:background="@null"/>
 
 </LinearLayout>
