--- a/NotABadPlayer/app/src/main/res/drawable/player_seek_thumb.xml
+++ b/NotABadPlayer/app/src/main/res/drawable/player_seek_thumb.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
 
-    <stroke android:width="1dp" android:color="@color/borderOutline"  />
+    <stroke android:width="1dp" android:color="?borderOutlineColor"  />
 
     <gradient
         android:angle="270"
