--- a/NotABadPlayer/app/src/main/res/drawable/settings_item_border.xml
+++ b/NotABadPlayer/app/src/main/res/drawable/settings_item_border.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="1dp" android:color="@color/borderOutline"  />
-    <solid android:color="@color/genericBorderBackground" />
+    <stroke android:width="1dp" android:color="?borderOutlineColor"  />
+    <solid android:color="?genericBorderBackgroundColor" />
     <corners android:radius="10dp" />
     <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" /></shape>
