--- a/NotABadPlayer/app/src/main/res/layout/activity_create_playlist.xml
+++ b/NotABadPlayer/app/src/main/res/layout/activity_create_playlist.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/baseBackground">
+    android:background="@drawable/background_base">
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_height="48dp"
             android:text="@string/playlist_cancel"
             android:textAppearance="@style/GenericButtonText"
-            android:background="@color/genericButtonBackground"/>
+            android:background="@drawable/background_button"/>
         <Space
             android:layout_width="10dp"
             android:layout_height="0dp" />
@@ -25,11 +25,13 @@
             android:id="@+id/playlistNameField"
             android:layout_width="0dp"
             android:layout_height="40dp"
-            android:textAppearance="@style/PrimaryText"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:textAppearance="@style/BlackText"
             android:textColor="@null"
             android:background="@drawable/playlist_name_field_border"
             android:hint="@string/playlist_name"
-            android:textColorHint="@color/primarySubtext"
+            android:textColorHint="@color/grayText"
             android:layout_weight="0.33"
             android:inputType="textVisiblePassword"
             android:singleLine="true"/>
@@ -42,7 +44,7 @@
             android:layout_height="48dp"
             android:text="@string/playlist_done"
             android:textAppearance="@style/GenericButtonText"
-            android:background="@color/genericButtonBackground"/>
+            android:background="@drawable/background_button"/>
     </LinearLayout>
     
     <LinearLayout
